--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
         </div>
     </div>
     <div id="resultContainer">
+        <div id="targetPresentation"></div>
+    </div>
+    <div id="loading-container">
+        <div class="loader"></div>
     </div>
     <script src="./index.js"></script>
 </body>
