Added extra features to list page

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 </head>
 <body>
     <header>
+        <a href="./list.html">Pokemon Lists</a>
         <img src="./logo.png" alt="Pokémon Logo">
     </header>
     <div id="searchBar">
@@ -23,7 +24,7 @@
         </div>
     </div>
     <div id="resultContainer">
-        <div id="targetPresentation"></div>
+        <div class="targetPresentation"></div>
     </div>
     <div id="loading-container">
         <div class="loader"></div>
