Filter lists by type feature added

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </div>
     </div>
     <div id="resultContainer">
-        <div class="targetPresentation"></div>
+        <div id="targetContainer"></div>
     </div>
     <div id="loading-container">
         <div class="loader"></div>
